# platform.core.appfw.event-system

./: CMakeLists.txt  eventsystem.conf
include/: eventsystem_daemon.h
packaging/: esd.service  esd.spec
src/: esd_main.c  esd_system_event.c
